# reverb_vst

./: Cargo.toml  README.md  TODO.md  bundle_macos.sh
src/: lib.rs  main.rs  plugin_state.rs  wav.rs
src/dsp/: convolution.rs  fft.rs  mod.rs  spring_impulse_response.rs
