[package]
name = "reverb"
version = "0.1.0"
edition = "2021"

# No reason to distribute a VST plugin on crates.io.
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "^ 0.2"
hound = "^ 3.4"
once_cell = "^ 1.4"
zerocopy = "^ 0.3"
vst_window = "^ 0.1.0"
wgpu = "^ 0.6"
wgpu_glyph = "^ 0.10"
raw-window-handle = "^ 0.3"
cgmath = "^ 0.17"
futures = "^ 0.3"
rustfft = "^ 6.0"
